jena-shex/src/test/files/shexTest/negativeStructure/NonExtendable.shex
<http://a.example/S1> {
   <http://a.example/p1> .
}

<http://a.example/S2> {
   <http://a.example/p2> .
}

<http://a.example/S4>
        EXTENDS @<http://a.example/S1> {} AND EXTENDS @<http://a.example/S2> {}


